--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- 로그인 UI -->
   <div id="authUI">
+    <input type="text" id="nickname" placeholder="닉네임" /><br />
     <input type="email" id="email" placeholder="이메일" /><br />
     <input type="password" id="password" placeholder="비밀번호" /><br />
     <button onclick="signUp()">회원가입</button>
