--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- 게임 UI -->
   <div id="gameUI">
-    <p><strong>현재 유저:</strong> <span id="userEmail"></span></p>
+    <p><strong>현재 유저:</strong> <span id="nickname"></span></p>
     <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeonTime">60</span>초</p>
     <button onclick="enterDungeon()">던전 입장</button>
     <button onclick="signOut()">로그아웃</button>
