--- a/index.html
+++ b/index.html
@@ -8,79 +8,29 @@
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
   <script src="firebase-config.js"></script>
   <style>
-    body { font-family: Arial; text-align: center; background: #f5f5f5; padding: 30px; margin-bottom: 140px; /* 아래 고정바 공간 확보 */ }
+    body { font-family: Arial; text-align: center; background: #f5f5f5; padding: 30px; margin-bottom: 140px; }
     button { margin: 5px; padding: 10px 20px; cursor: pointer; }
     #log { max-height: 200px; overflow-y: auto; border: 1px solid #ccc; background: #fff; padding: 10px; margin-top: 20px; text-align: left; }
     #gameUI { display: none; }
-    /* 하단 고정 상태바 스타일 */
     #bottomStatus {
-      position: fixed; bottom: 0; left: 0; width: 100%;
-      background: #222; color: white;
-      padding: 15px 20px;
-      box-sizing: border-box;
-      font-family: Arial;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      z-index: 1000;
+      position: fixed; bottom: 0; left: 0; width: 100%; background: #222; color: white;
+      padding: 15px 20px; box-sizing: border-box; display: flex; flex-wrap: wrap;
+      align-items: center; justify-content: center; gap: 20px; z-index: 1000;
     }
-    /* 스테이지 컨트롤 버튼 */
     #stagePrev, #stageNext {
-      font-size: 24px;
-      background: #444;
-      border: none;
-      color: white;
-      padding: 4px 12px;
-      border-radius: 4px;
-      user-select: none;
-      transition: background 0.2s;
+      font-size: 24px; background: #444; border: none; color: white;
+      padding: 4px 12px; border-radius: 4px; user-select: none;
     }
-    #stagePrev:hover, #stageNext:hover {
-      background: #666;
-    }
-    /* 상태바 컨테이너 */
-    .status-bar-container {
-      width: 300px;
-      min-width: 250px;
-    }
-    /* 바 배경 */
-    .bar-bg {
-      background: #555;
-      border-radius: 8px;
-      height: 22px;
-      width: 100%;
-      overflow: hidden;
-      box-shadow: inset 0 0 5px #00000088;
-    }
-    /* 체력 바 */
-    #hpBar {
-      height: 100%;
-      background: #e74c3c;
-      width: 100%;
-      transition: width 0.3s ease;
-    }
-    /* 경험치 바 */
-    #expBar {
-      height: 100%;
-      background: #3498db;
-      width: 0%;
-      transition: width 0.3s ease;
-    }
-    /* 텍스트 정렬 */
-    .bar-text {
-      text-align: right;
-      font-size: 13px;
-      margin-top: 4px;
-      user-select: none;
-    }
+    .status-bar-container { width: 300px; min-width: 250px; }
+    .bar-bg { background: #555; border-radius: 8px; height: 22px; width: 100%; overflow: hidden; }
+    #hpBar { height: 100%; background: #e74c3c; width: 100%; transition: width 0.3s ease; }
+    #expBar { height: 100%; background: #3498db; width: 0%; transition: width 0.3s ease; }
+    .bar-text { text-align: right; font-size: 13px; margin-top: 4px; user-select: none; }
   </style>
 </head>
 <body>
   <h1>자동사냥 RPG</h1>
 
-  <!-- 로그인/회원가입 UI -->
   <div id="authUI">
     <input type="text" id="nicknameInput" placeholder="닉네임" /><br />
     <input type="email" id="email" placeholder="이메일" /><br />
@@ -89,35 +39,45 @@
     <button onclick="signIn()">로그인</button>
   </div>
 
-  <!-- 게임 UI -->
   <div id="gameUI">
+    <div id="tabs">
+      <button onclick="showTab('home')">홈</button>
+      <button onclick="showTab('dungeon')">던전</button>
+    </div>
+
+    <div id="homeTab">
+      <p>어서오세요! 던전에 입장하여 전투를 시작하세요.</p>
+    </div>
+
+    <div id="dungeonTab" style="display:none;">
+      <p>던전 스테이지: <span id="stageDisplay">1</span></p>
+      <button onclick="enterDungeon()">던전 입장</button>
+    </div>
+
     <p><strong>현재 유저:</strong> <span id="nicknameDisplay"></span></p>
     <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeonTime">60</span>초</p>
     <p>레벨: <span id="level">1</span></p>
     <p>체력: <span id="hp">100</span> / <span id="maxHp">100</span></p>
-    <p>물약: <span id="potions">3</span> <button onclick="usePotion()">물약 사용</button></p>
-    <button onclick="enterDungeon()">던전 입장</button>
+    <p>
+      물약:
+      소형: <span id="potionSmall">3</span>
+      중형: <span id="potionMedium">1</span>
+      대형: <span id="potionLarge">0</span>
+    </p>
     <button onclick="signOut()">로그아웃</button>
     <div id="log"></div>
   </div>
 
-  <!-- 하단 상태바 & 스테이지 컨트롤 -->
   <div id="bottomStatus">
-    <button id="stagePrev" title="이전 스테이지">⬅</button>
+    <button id="stagePrev">⬅</button>
     <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
-    <button id="stageNext" title="다음 스테이지">➡</button>
-
+    <button id="stageNext">➡</button>
     <div class="status-bar-container">
-      <div class="bar-bg">
-        <div id="hpBar"></div>
-      </div>
+      <div class="bar-bg"><div id="hpBar"></div></div>
       <div class="bar-text" id="hpText">100 / 100</div>
     </div>
-
     <div class="status-bar-container">
-      <div class="bar-bg">
-        <div id="expBar"></div>
-      </div>
+      <div class="bar-bg"><div id="expBar"></div></div>
       <div class="bar-text" id="expText">0 / 100</div>
     </div>
   </div>
@@ -126,100 +86,66 @@
     let userData = null;
     let inDungeon = false;
     let dungeonInterval;
-    let autoHuntInterval;
-
     let currentStage = 1;
     const maxStage = 100;
-
     const auth = firebase.auth();
     const db = firebase.firestore();
 
-    function log(message) {
-      const logDiv = document.getElementById("log");
-      logDiv.innerHTML = `<div>> ${message}</div>` + logDiv.innerHTML;
+    function log(msg) {
+      document.getElementById("log").innerHTML = `<div>> ${msg}</div>` + document.getElementById("log").innerHTML;
     }
 
     function updateUI() {
       if (!userData) return;
-
-      // 기본 정보
       document.getElementById("gold").innerText = userData.gold;
       document.getElementById("exp").innerText = userData.exp;
       document.getElementById("dungeonTime").innerText = userData.dungeonTime;
       document.getElementById("hp").innerText = userData.hp;
       document.getElementById("maxHp").innerText = userData.maxHp;
       document.getElementById("level").innerText = userData.level;
-      document.getElementById("potions").innerText = userData.potions;
-
-      // 스테이지
+      document.getElementById("potionSmall").innerText = userData.potions.small;
+      document.getElementById("potionMedium").innerText = userData.potions.medium;
+      document.getElementById("potionLarge").innerText = userData.potions.large;
       document.getElementById("stageDisplay").innerText = currentStage;
 
-      // 체력바 업데이트
-      const hpPercent = Math.max(0, Math.min(100, (userData.hp / userData.maxHp) * 100));
+      const hpPercent = (userData.hp / userData.maxHp) * 100;
       document.getElementById("hpBar").style.width = hpPercent + "%";
       document.getElementById("hpText").innerText = `${userData.hp} / ${userData.maxHp}`;
 
-      // 경험치바 업데이트 (레벨업 필요 경험치 = level * 100)
       const expToNext = userData.level * 100;
-      const expPercent = Math.min(100, (userData.exp / expToNext) * 100);
+      const expPercent = (userData.exp / expToNext) * 100;
       document.getElementById("expBar").style.width = expPercent + "%";
       document.getElementById("expText").innerText = `${userData.exp} / ${expToNext}`;
     }
 
-    function saveData() {
-      const user = auth.currentUser;
-      if (user && userData) {
-        db.collection("users").doc(user.uid).set(userData, { merge: true });
+    function autoUsePotion() {
+      const missingHp = userData.maxHp - userData.hp;
+      if (missingHp <= 0) return;
+      if (userData.potions.large > 0 && missingHp >= 200) {
+        userData.potions.large--;
+        userData.hp = userData.maxHp;
+        log("대형 물약 사용! 체력 완전 회복");
+      } else if (userData.potions.medium > 0 && missingHp >= 100) {
+        userData.potions.medium--;
+        userData.hp += 100;
+        log("중형 물약 사용! 체력 100 회복");
+      } else if (userData.potions.small > 0 && missingHp >= 50) {
+        userData.potions.small--;
+        userData.hp += 50;
+        log("소형 물약 사용! 체력 50 회복");
       }
+      userData.hp = Math.min(userData.hp, userData.maxHp);
     }
 
-    function loadData() {
-      const user = auth.currentUser;
-      if (user) {
-        return db.collection("users").doc(user.uid).get().then(doc => {
-          if (doc.exists) {
-            userData = doc.data();
-          } else {
-            // 새 사용자 초기값
-            userData = {
-              nickname: user.email,
-              gold: 0,
-              exp: 0,
-              dungeonTime: 60,
-              hp: 100,
-              maxHp: 100,
-              level: 1,
-              potions: 3
-            };
-            db.collection("users").doc(user.uid).set(userData);
-          }
-          document.getElementById("nicknameDisplay").innerText = userData.nickname || user.email;
-          updateUI();
-        });
-      } else {
-        return Promise.reject("로그인되지 않음");
+    function checkLevelUp() {
+      const needExp = userData.level * 100;
+      while (userData.exp >= needExp) {
+        userData.exp -= needExp;
+        userData.level++;
+        userData.maxHp += 20;
+        userData.hp = userData.maxHp;
+        log(`레벨업! 현재 레벨: ${userData.level}`);
       }
-    }
-
-    function startAutoHunt() {
-      if (autoHuntInterval) return; // 중복 실행 방지
-      autoHuntInterval = setInterval(() => {
-        if (!inDungeon && userData) {
-          if (userData.hp <= 0) {
-            log("체력이 0입니다. 자동사냥이 중지되었습니다.");
-            clearInterval(autoHuntInterval);
-            autoHuntInterval = null;
-            return;
-          }
-          userData.gold += 10;
-          userData.exp += 5;
-          userData.hp -= 10; // 체력 10 소모
-          log("몬스터 처치! 골드 +10, 경험치 +5, 체력 -10");
-          checkLevelUp();
-          updateUI();
-          saveData();
-        }
-      }, 1000);
     }
 
     function enterDungeon() {
@@ -233,133 +159,96 @@
         userData.dungeonTime--;
         userData.gold += 50;
         userData.exp += 20;
-        userData.hp -= 15; // 던전에서는 체력 더 많이 소모
-        if (userData.hp <= 0) {
-          userData.hp = 0;
-          log("체력이 0이 되어 던전을 탈출합니다.");
-          clearInterval(dungeonInterval);
-          inDungeon = false;
-        }
-        log("던전 몬스터 처치! 골드 +50, 경험치 +20, 체력 -15");
+        userData.hp -= 15;
+        autoUsePotion();
         checkLevelUp();
         updateUI();
         saveData();
-
-        if (userData.dungeonTime <= 0) {
+        if (userData.hp <= 0 || userData.dungeonTime <= 0) {
           clearInterval(dungeonInterval);
           inDungeon = false;
-          log("던전 시간이 종료되었습니다.");
+          log("던전 종료");
         }
       }, 1000);
     }
 
-    function usePotion() {
-      if (userData.potions <= 0) {
-        alert("물약이 없습니다!");
-        return;
-      }
-      if (userData.hp >= userData.maxHp) {
-        alert("체력이 이미 가득합니다.");
-        return;
-      }
-      userData.potions--;
-      userData.hp = Math.min(userData.hp + 50, userData.maxHp);
-      log("물약 사용! 체력 50 회복");
-      updateUI();
-      saveData();
+    function showTab(name) {
+      document.getElementById("homeTab").style.display = name === "home" ? "block" : "none";
+      document.getElementById("dungeonTab").style.display = name === "dungeon" ? "block" : "none";
     }
 
-    function checkLevelUp() {
-      const expToNextLevel = userData.level * 100;
-      while(userData.exp >= expToNextLevel) {
-        userData.exp -= expToNextLevel;
-        userData.level++;
-        userData.maxHp += 20;
-        userData.hp = userData.maxHp;
-        log(`레벨업! 현재 레벨: ${userData.level}`);
-      }
+    function saveData() {
+      const user = auth.currentUser;
+      if (user) db.collection("users").doc(user.uid).set(userData);
+    }
+
+    function loadData() {
+      const user = auth.currentUser;
+      return db.collection("users").doc(user.uid).get().then(doc => {
+        if (doc.exists) {
+          userData = doc.data();
+        } else {
+          userData = {
+            nickname: user.email,
+            gold: 0, exp: 0, level: 1,
+            dungeonTime: 60,
+            hp: 100, maxHp: 100,
+            potions: { small: 3, medium: 1, large: 0 }
+          };
+        }
+        document.getElementById("nicknameDisplay").innerText = userData.nickname;
+        updateUI();
+      });
     }
 
     function signUp() {
       const nickname = document.getElementById("nicknameInput").value.trim();
       const email = document.getElementById("email").value.trim();
       const pw = document.getElementById("password").value;
-
-      if (!nickname || !email || !pw) {
-        alert("모든 필드를 입력하세요.");
-        return;
-      }
-
-      auth.createUserWithEmailAndPassword(email, pw)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          userData = {
-            nickname: nickname,
-            gold: 0,
-            exp: 0,
-            dungeonTime: 60,
-            hp: 100,
-            maxHp: 100,
-            level: 1,
-            potions: 3
-          };
-          return db.collection("users").doc(user.uid).set(userData).then(() => user);
-        })
-        .then((user) => {
-          alert("회원가입 성공");
-          document.getElementById("authUI").style.display = "none";
-          document.getElementById("gameUI").style.display = "block";
-          document.getElementById("nicknameDisplay").innerText = userData.nickname;
-          updateUI();
-          startAutoHunt();
-        })
-        .catch(err => alert(err.message));
+      auth.createUserWithEmailAndPassword(email, pw).then(userCred => {
+        userData = {
+          nickname: nickname,
+          gold: 0, exp: 0, level: 1,
+          dungeonTime: 60,
+          hp: 100, maxHp: 100,
+          potions: { small: 3, medium: 1, large: 0 }
+        };
+        return db.collection("users").doc(userCred.user.uid).set(userData);
+      }).then(() => {
+        alert("회원가입 성공");
+        document.getElementById("authUI").style.display = "none";
+        document.getElementById("gameUI").style.display = "block";
+        updateUI();
+      });
     }
 
     function signIn() {
       const email = document.getElementById("email").value.trim();
       const pw = document.getElementById("password").value;
-      if (!email || !pw) {
-        alert("이메일과 비밀번호를 입력하세요.");
-        return;
-      }
-
-      auth.signInWithEmailAndPassword(email, pw)
-        .then(() => {
-          document.getElementById("authUI").style.display = "none";
-          document.getElementById("gameUI").style.display = "block";
-          return loadData();
-        })
-        .then(() => {
-          startAutoHunt();
-        })
-        .catch(err => alert(err.message));
-    }
-
-    function signOut() {
-      auth.signOut().then(() => {
-        location.reload();
+      auth.signInWithEmailAndPassword(email, pw).then(() => {
+        document.getElementById("authUI").style.display = "none";
+        document.getElementById("gameUI").style.display = "block";
+        showTab('home');
+        return loadData();
       });
     }
 
-    // 스테이지 좌우 버튼 이벤트 및 표시 업데이트
-    document.getElementById("stagePrev").addEventListener("click", () => {
+    function signOut() {
+      auth.signOut().then(() => location.reload());
+    }
+
+    document.getElementById("stagePrev").onclick = () => {
       if (currentStage > 1) {
         currentStage--;
-        log(`스테이지가 ${currentStage}로 변경되었습니다.`);
         updateUI();
       }
-    });
-
-    document.getElementById("stageNext").addEventListener("click", () => {
+    };
+    document.getElementById("stageNext").onclick = () => {
       if (currentStage < maxStage) {
         currentStage++;
-        log(`스테이지가 ${currentStage}로 변경되었습니다.`);
         updateUI();
       }
-    });
-
+    };
   </script>
 </body>
 </html>
-
