--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="log"></div>
   </div>
 
-  <div id="bottomStatus" style="display: none;>
+  <div id="bottomStatus" style="display: none;">
     <button id="stagePrev">⬅</button>
     <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
     <button id="stageNext">➡</button>
