--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
     </div>
 
     <div id="dungeonTab" style="display:none;">
-      <button id="stagePrev">⬅</button>
-      <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
-      <button id="stageNext">➡</button>
+      <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
+        <button id="stagePrev">⬅</button>
+        <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
+        <button id="stageNext">➡</button>
+      </div>
       <button onclick="enterDungeon()">던전 입장</button>
     </div>
 
