--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <button onclick="signIn()">로그인</button>
   </div>
 
-  <div id="gameUI">
+  <div id="gameUI" style="display: flex">
     <div id="tabs">
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
     </div>
 
-    <div id="homeTab">
+    <div id="homeTab" style="display: flex">
       <p>어서오세요! 던전에 입장하여 전투를 시작하세요.</p>
     </div>
 
