--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       }).then(() => {
         alert("회원가입 성공");
         document.getElementById("authUI").style.display = "none";
-        document.getElementById("gameUI").style.display = "flex";
+        document.getElementById("gameUI").style.display = "block";
         document.getElementById("bottomStatus").style.display = "flex";
         updateUI();
       });
@@ -231,7 +231,7 @@
       const pw = document.getElementById("password").value;
       auth.signInWithEmailAndPassword(email, pw).then(() => {
         document.getElementById("authUI").style.display = "none";
-        document.getElementById("gameUI").style.display = "flex";
+        document.getElementById("gameUI").style.display = "block";
         document.getElementById("bottomStatus").style.display = "flex";
         showTab('home');
         return loadData();
