--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
           clearInterval(dungeonInterval);
           inDungeon = false;
           log("던전 종료");
+          showTab("home");
         }
       }, 1000);
     }
