--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <div id="gameUI">
-    <div id="tabs" align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
+    <div id="tabs" style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-bottom: 10px;">
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
     </div>
