--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div id="tabs" style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-bottom: 10px;">
       <button onclick="showTab('home')">홈</button>
       <button onclick="showTab('dungeon')">던전</button>
+      <button onclick="showTab('shop')">상점</button>
     </div>
 
     <div id="homeTab">
@@ -55,16 +56,53 @@
         <div><strong>스테이지:</strong> <span id="stageDisplay">1</span></div>
         <button id="stageNext">➡</button>
       </div>
-      <button onclick="enterDungeon()">던전 입장</button>
+      <button onclick="enterDungeon()" id="dungeonToggleBtn">던전 입장</button>
+    </div>
+
+    <div id="shopTab" style="display:none;">
+      <h2>상점</h2>
+      <p>보유 골드: <span id="goldShop">0</span></p>
+      <button onclick="buyPotion('small')">소형 물약 (50G)</button>
+      <button onclick="buyPotion('medium')">중형 물약 (100G)</button>
+      <button onclick="buyPotion('large')">대형 물약 (200G)</button>
     </div>
 
     <p><strong>현재 유저:</strong> <span id="nicknameDisplay"></span></p>
-    <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeon수
+    <p>골드: <span id="gold">0</span> | 경험치: <span id="exp">0</span> | 던전 시간: <span id="dungeonTime">60</span>초</p>
+    <p>레벨: <span id="level">1</span></p>
+    <p>체력: <span id="hp">100</span> / <span id="maxHp">100</span></p>
+    <p>
+      물약:
+      소형: <span id="potionSmall">3</span>
+      중형: <span id="potionMedium">1</span>
+      대형: <span id="potionLarge">0</span>
+    </p>
+    <button onclick="signOut()">로그아웃</button>
+    <div id="log"></div>
+  </div>
+
+  <div id="bottomStatus" style="display: none;">
+    <div class="status-bar-container">
+      <div class="bar-bg"><div id="hpBar"></div></div>
+      <div class="bar-text" id="hpText">100 / 100</div>
+    </div>
+    <div class="status-bar-container">
+      <div class="bar-bg"><div id="expBar"></div></div>
+      <div class="bar-text" id="expText">0 / 100</div>
+    </div>
+  </div>
+
+  <script>
+    let userData = null;
+    let inDungeon = false;
+    let dungeonInterval;
+    let currentStage = 1;
+    const maxStage = 100;
+
     function log(msg) {
       document.getElementById("log").innerHTML = `<div>> ${msg}</div>` + document.getElementById("log").innerHTML;
     }
 
-    //UI업뎃 함수
     function updateUI() {
       if (!userData) return;
       document.getElementById("gold").innerText = userData.gold;
@@ -77,6 +115,7 @@
       document.getElementById("potionMedium").innerText = userData.potions.medium;
       document.getElementById("potionLarge").innerText = userData.potions.large;
       document.getElementById("stageDisplay").innerText = currentStage;
+      document.getElementById("goldShop").innerText = userData.gold;
 
       const hpPercent = (userData.hp / userData.maxHp) * 100;
       document.getElementById("hpBar").style.width = hpPercent + "%";
@@ -88,7 +127,23 @@
       document.getElementById("expText").innerText = `${userData.exp} / ${expToNext}`;
     }
 
-    //포션 자동사용 함수
+    function buyPotion(type) {
+      const costMap = { small: 50, medium: 100, large: 200 };
+      const labelMap = { small: "소형", medium: "중형", large: "대형" };
+      const cost = costMap[type];
+
+      if (userData.gold < cost) {
+        alert("골드가 부족합니다!");
+        return;
+      }
+
+      userData.gold -= cost;
+      userData.potions[type]++;
+      log(`${labelMap[type]} 물약을 구매했습니다!`);
+      updateUI();
+      saveData();
+    }
+
     function autoUsePotion() {
       const missingHp = userData.maxHp - userData.hp;
       if (missingHp <= 0) return;
@@ -108,7 +163,6 @@
       userData.hp = Math.min(userData.hp, userData.maxHp);
     }
 
-    //레벨업 확인 함수
     function checkLevelUp() {
       const needExp = userData.level * 100;
       while (userData.exp >= needExp) {
@@ -120,19 +174,18 @@
       }
     }
 
-    //던전 입장 함수
     function enterDungeon() {
       if (inDungeon) {
-        exitDungeon(); // ✅ 기존 함수 재활용
+        exitDungeon();
         return;
       }
-      if (inDungeon || userData.dungeonTime <= 0) {
+      if (userData.dungeonTime <= 0) {
         alert("던전에 입장할 수 없습니다.");
         return;
       }
       inDungeon = true;
-      log("던전에 입장합니다!");
       document.getElementById("dungeonToggleBtn").innerText = "던전 나가기";
+      log("던전에 입장합니다!");
       dungeonInterval = setInterval(() => {
         userData.dungeonTime--;
         userData.gold += 50;
@@ -143,40 +196,40 @@
         updateUI();
         saveData();
         if (userData.hp <= 0 || userData.dungeonTime <= 0) {
+          clearInterval(dungeonInterval);
+          inDungeon = false;
+          document.getElementById("dungeonToggleBtn").innerText = "던전 입장";
+          log("던전에서 나왔습니다.");
           showTab("home");
         }
       }, 1000);
     }
 
-    //던전 나가는 함수
     function exitDungeon() {
-      if (!inDungeon) {
-        alert("던전에 입장하지 않았습니다.");
-        return;
-      }
+      if (!inDungeon) return;
       clearInterval(dungeonInterval);
       inDungeon = false;
+      document.getElementById("dungeonToggleBtn").innerText = "던전 입장";
       log("던전에서 나왔습니다.");
     }
 
-    //유저가 있는 곳에 맞춰서 관련 화면 보여주는 함수
     function showTab(name) {
       if (name === "home" && inDungeon) {
-        exitDungeon(); // ✅ 홈으로 이동할 때 던전 나가기 자동 호출
-        log("던전에서 나왔습니다")
+        exitDungeon();
       }
-      
       document.getElementById("homeTab").style.display = name === "home" ? "block" : "none";
       document.getElementById("dungeonTab").style.display = name === "dungeon" ? "block" : "none";
+      document.getElementById("shopTab").style.display = name === "shop" ? "block" : "none";
+      if (name === "shop") {
+        document.getElementById("goldShop").innerText = userData.gold;
+      }
     }
 
-    //유저 정보 저장하는 함수
     function saveData() {
       const user = auth.currentUser;
       if (user) db.collection("users").doc(user.uid).set(userData);
     }
 
-    //유저 정보 불러오는 함수
     function loadData() {
       const user = auth.currentUser;
       return db.collection("users").doc(user.uid).get().then(doc => {
@@ -196,7 +249,6 @@
       });
     }
 
-    //회원가입 함수
     function signUp() {
       const nickname = document.getElementById("nicknameInput").value.trim();
       const email = document.getElementById("email").value.trim();
@@ -223,7 +275,6 @@
       });
     }
 
-    //로그인 함수
     function signIn() {
       const email = document.getElementById("email").value.trim();
       const pw = document.getElementById("password").value;
@@ -236,7 +287,6 @@
       });
     }
 
-    //로그아웃 함수
     function signOut() {
       auth.signOut().then(() => location.reload());
     }
